fix: correct env imports

--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,1 @@
-DB_STORAGE_PATH=idb://patient-registration-indexed-db
-WORKER_GROUP_ID=patient-registration-group-id-d5c36ef3-a247-4e4a-bb4c-d652d6c06243
+VITE_DB_STORAGE_PATH=idb://patient-registration-indexed-db
